# geometry-dash-ai

./: .gitignore  agent_plan.md  plan.md  pyproject.toml
documents/: agent_plan.md  feedback_260626.md  live_rl_experiments_260626.md  plan.md
gd_capture/: __init__.py  manifest.py  screen_capture.py  validation.py
gd_env/: __init__.py  client.py  dummy_env.py  protocol.py
gd_human_model/: __init__.py  events.py  humanized_agent.py  macro_humanizer.py  motor_noise.py  observation_buffer.py  profile.py
gd_imitation/: __init__.py  baseline.py  dataset.py  decoder.py  image_dataset.py  state_decoder.py
gd_rl/: __init__.py  actions.py  geode_executor.py  live_env.py  live_learner.py  policy.py  results.py  rewards.py  runner.py  synthetic.py  timing_search.py
gd_trace/: __init__.py  analyze_click_window.py  cli.py  click_window.py  compare_trace.py  humanized_run.py  input_macro.py  load_trace.py  macro_schema.py  replay_check.py  save_trace.py  trace_schema.py
geode_mod/: CMakeLists.txt  README.md  mod.json
geode_mod/src/: main.cpp
scripts/: capture_geode_frames.py  compare_practice_runs.py  extract_trace_input_events.py  predict_imitation_macro.py  predict_imitation_state_macro.py  prepare_imitation_dataset.py  probe_geode_death_macro.py  run_dummy_bridge_macro.py  run_geode_bridge_macro.py  run_geode_replay_check.py  run_humanized_geode_macro.py  run_live_rl_practice_geode.py  run_rl_practice_geode.py  run_rl_timing_search_geode.py  train_imitation_baseline.py
tests/: test_capture_geode_frames.py  test_click_window.py  test_compare_practice_runs.py  test_compare_trace.py  test_env_client_dummy.py  test_env_protocol.py  test_events.py  test_extract_trace_input_events.py  test_frame_capture.py  test_geode_practice_executor.py  test_humanized_agent.py  test_humanized_run.py  test_image_dataset.py  test_imitation_dataset.py  test_imitation_decoder.py  test_rl_results.py  (+21 more)
(+8 files in other folders)
