[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "geometry-dash-ai"
version = "0.1.0"
description = "Human-like Geometry Dash practice-learning experiments."
readme = "plan.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
gd-trace-validate = "gd_trace.cli:trace_validate_main"
gd-macro-validate = "gd_trace.cli:macro_validate_main"
gd-trace-compare = "gd_trace.cli:trace_compare_main"
gd-click-window = "gd_trace.cli:click_window_main"

[tool.setuptools.packages.find]
include = ["gd_capture*", "gd_env*", "gd_human_model*", "gd_imitation*", "gd_rl*", "gd_trace*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
